Fix dashboard width and file list (#162)
* Fix total count of paginated files in list call

* Fix secure data browser off screen in dashboard

* Update gradle version to 3.15.7

* Add max width to secure data browser in dashboard

--- a/dashboard/app/components/SecureDataForm/SecureDataForm.scss
+++ b/dashboard/app/components/SecureDataForm/SecureDataForm.scss
@@ -1,7 +1,8 @@
 @import '../../assets/styles/common.scss';
 
 #add-new-secure-data-form {
-  width: 1150px;
+  width: 100%;
+  max-width: 1150px;
   #new-secure-data-path {
     display: flex;
     font-size: 16px;
